✨ feat : 타자연습 백엔드 구축 + swagger API 작업, 타자연습 route주소 변경
